RESOLVED FIXED275476
Prevent crash when calling [AVCaptureSession init] in AVVideoCaptureSource
https://bugs.webkit.org/show_bug.cgi?id=275476
Summary Prevent crash when calling [AVCaptureSession init] in AVVideoCaptureSource
youenn fablet
Reported 2024-06-14 02:37:24 PDT
Attachments
youenn fablet
Comment 1 2024-06-14 02:37:57 PDT
youenn fablet
Comment 2 2024-06-14 02:44:11 PDT
EWS
Comment 3 2024-06-14 09:31:36 PDT
Committed 280020@main (dcc6c1646e3a): <https://commits.webkit.org/280020@main> Reviewed commits have been landed. Closing PR #29815 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.