Prevent crash when calling [AVCaptureSession init] in AVVideoCaptureSource https://bugs.webkit.org/show_bug.cgi?id=275476 rdar://129801303

Reviewed by Eric Carlson.

We partially revert https://commits.webkit.org/277415@main, as it reintroduce the crash for safari view services.
We disable the checks specifically for iOS simulator, since there is no support for media endowments.

* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::startProducingData):
* Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
(WebKit::UserMediaCaptureManagerProxy::startProducingData):

Canonical link: https://commits.webkit.org/280020@main